force-app/main/default/objects/Ticket__c/Ticket__c.object-meta.xml
<CustomObject>
    <label>Support Ticket</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Ticket</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>