force-app/main/default/objects/Ticket__c/fields/Approach__c.field-meta.xml
<CustomField>
    <fullName>Approach__c</fullName>
    <label>Approach</label>
    <type>TextArea</type>
</CustomField>