force-app/main/default/objects/Ticket__c/fields/Estimation_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimation_In_Hours__c</fullName>
    <label>Estimation (In Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>