force-app/main/default/objects/Ticket__c/fields/On__c.field-meta.xml
<CustomField>
    <fullName>On__c</fullName>
    <label>On Hold Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>