force-app/main/default/objects/Ticket__c/fields/Our_Understanding__c.field-meta.xml
<CustomField>
    <fullName>Our_Understanding__c</fullName>
    <label>Our Understanding</label>
    <type>TextArea</type>
</CustomField>