force-app/main/default/objects/Ticket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed in Sandbox</fullName>
            </value>
            <value>
                <fullName>UTA Done</fullName>
            </value>
            <value>
                <fullName>Complete in Production</fullName>
            </value>
            <value>
                <fullName>Production Testing Completed</fullName>
            </value>
            <value>
                <fullName>Reopen</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>On Hold-Reason</fullName>
                <isActive>false</isActive>
                <label>On Hold-Reason</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>