force-app/main/default/objects/Ticket__c/validationRules/Ticket_Status_On_Hold_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Ticket_Status_On_Hold_Reason</fullName>
    <active>true</active>
    <description>If Ticket &apos;Status&apos; is &quot;On Hold&quot;, the On Hold Reason field should be filled.</description>
    <errorConditionFormula>TEXT(Status__c)==&quot;On Hold&quot; &amp;&amp; On__c==NULL</errorConditionFormula>
    <errorMessage>If Ticket &apos;Status&apos; is &quot;On Hold&quot;, the On Hold Reason field should be filled.</errorMessage>
</ValidationRule>